[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fabricease"
version = "0.1.0"
description = "A Simple Python Library for Microsoft Fabric SQL Database Connections"
authors = [{name = "Abdulrafiu Izuafa", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pyodbc>=4.0.34",
    "azure-identity>=1.12.0", 
    "python-dotenv>=0.19.0"
]

[project.urls]
Homepage = "https://github.com/your-username/fabricease"
Repository = "https://github.com/your-username/fabricease.git"
Issues = "https://github.com/your-username/fabricease/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0", 
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.812"
]